# improved_json

./: .pre-commit-config.yaml  README.md  pyproject.toml
improved_json/: __init__.py  code.py  coders.py  improved_json.py  type_check.py  types.py
tests/: test_custom.py  test_decode.py  test_encode.py  test_round_trip.py  test_type_check.py  type_check.py
